Fixed alignment and hide content template

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,9 @@
     transform: scale(1.05);
     cursor:pointer;
 }
+.advance-icon-button .button-text{
+    font-size:17px;
+}
 
 
 /*Hover*/
@@ -98,38 +101,45 @@
 /*    !*align-items: center;*!*/
 /*    !*text-align: center;*!*/
 /*}*/
+.advance_icon_box_media{
+    display:inline-block;
+}
 .advance_icon_box.icon-position-top .advance_icon_box_media {
     margin-bottom: 10px;
 }
 
 .advance_icon_box.icon-position-left {
     display: flex;
-    /*align-items: center;*/
-    /*text-align: left;*/
 }
 
 .advance_icon_box.icon-position-left .advance_icon_box_media {
     margin-right: 10px;
+    /*flex: 0 0 auto;*/
+    /*flex-basis: 100%;*/
+}
+.advance_icon_box.icon-position-left .advance_icon_box_content{
+    /*flex: 0 0 auto;*/
+    /*flex-basis: 100%;*/
 }
 
 .advance_icon_box.icon-position-right {
     display: flex;
-    /*align-items: center;*/
     flex-direction: row-reverse;
-    /*text-align: left;*/
+
 }
 
 .advance_icon_box.icon-position-right .advance_icon_box_media {
     margin-left: 10px;
+    /*flex: 0 0 auto;*/
+}
+.advance_icon_box.icon-position-right .advance_icon_box_content {
+    /*flex:1;*/
+    /*flex-basis: 100%;*/
 }
 
 /*Badge section*/
 .badge {
     position: absolute;
-    /*background: #ff0000;*/
-    /*color: #fff;*/
-    /*padding: 5px 10px;*/
-    /*border-radius: 3px;*/
     font-size: 12px;
     z-index: 10;
 }
